scss/style.scss
@import 'libs/normalize';

$rosa: #ff6f6f;
$rosinha: #f4cccc;

*,
*:after,
*:before {
  box-sizing: border-box;
}

h1,
h2,
p {
  margin: 0;
}

ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

html {
  font-size: 16px;
  font-family: 'Space Mono', monospace;
}

body {
  background-color: pink;
  position: relative;

  &:after {
    z-index: 2;
    position: fixed;
    left: 0;
    top: 0;
    content: '';
    width: 100%;
    height: 5px;
    background: #f857a6;
    background: -webkit-linear-gradient(to left, #f857a6 , #ff5858);
    background: linear-gradient(to left, #f857a6 , #ff5858);
  }
}

header {
  position: relative;
  z-index: 1;
  min-height: 100vh;
  display: flex;
  flex-flow: column;
  color: #fff;
  text-align: center;
  background-image: url('../img/sorocaba.jpg');
  background-size: cover;
  background-position: center;

  &:before {
    position: absolute;
    left: 0;
    top: 0;
    content: '';
    width: 100%;
    height: 100%;
    z-index: -1;
    background: #f857a6;
    background: -webkit-linear-gradient(to left, #f857a6 , #ff5858);
    background: linear-gradient(to left, #f857a6 , #ff5858);
    opacity: .5;
  }

  &:after {
    position: absolute;
    left: 0;
    top: 0;
    content: '';
    width: 100%;
    height: 100%;
    z-index: -2;
    opacity: .8;
    background: #000;
    background: -webkit-linear-gradient(bottom, rgba(0,0,0,.5));
    background: linear-gradient(bottom, rgba(0,0,0,.2));
  }
}

h1 {
  font-family: 'Montserrat', sans-serif;
  font-size: 2rem;
  color: $rosa;

  @media (min-width: 768px) {
    font-size: 4rem;
  }

  span {
    color: $rosinha;
  }
}

.main {
  margin: auto;
  max-width: 90vw;

  a {
    letter-spacing: 1.5px;
  }

  p {
    font-weight: bold;
    margin: 1.5rem auto;

    @media (min-width: 768px) {
      font-size: 1.1rem;
    }
  }

  a {
    display: inline-block;
    padding: .75rem 1.5rem;
    font-size: 1.2rem;
    border-radius: 20px;
    background: $rosa;
    color: #fff;
    text-decoration: none;
    font-weight: bold;
    transition: all .2s ease;

    &:visited {
      color: #fff;
    }

    &:hover {
      background: darken($rosa, 10%);
    }
  }
}

.members {

  h2 {
    letter-spacing: 1px;
  }

  p {
    font-weight: bold;
  }

  ul {
    display: flex;
    width: 90vw;
    max-width: 280px;
    margin: 1rem auto;
  }

  li {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background: #fff;
    margin: auto;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;

    a {
      display: block;
      width: 100%;
      height: 100%;
    }

    &:nth-of-type(1) {
       background-image: url('../img/amanda-vilela.jpg');
    }

    &:nth-of-type(2) {
       background-image: url('../img/ana-gabriel.jpg');
    }

    &:nth-of-type(3) {
       background-image: url('../img/andre-oliveira.jpg');
    }

    &:nth-of-type(4) {
       background-image: url('../img/felipe-bernardes.jpg');
    }

    &:nth-of-type(5) {
       background-image: url('../img/felipe-soares.jpg');
    }
  }
}

footer {
  color: $rosa;
  text-align: center;
  padding: 2px 0;
}

.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}

